--- a/index.html
+++ b/index.html
@@ -1,15 +1,35 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Psalm of David Remix – The @ezabelxng Edition</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ezabel Ng Exposed – Scam Report in Singapore (Yishun Case)</title>
+
+  <meta name="description" content="Scam story of Ezabel Ng aka @ezabelxng from Yishun. Learn how Ezabel Ng, along with Tan Kok Liang and Kayson, deceived victims. Read this Singapore Scamshield warning.">
+  <meta name="keywords" content="Ezabel Ng, ezabelxng, Yishun, Kayson, Tan Kok Liang, Scam, Scammer, Singapore, Scamshield, SingaporeScammer">
+  <meta name="author" content="Singapore Scam Review">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://ourvapestoresg.github.io/ezabelng/" />
+
+  <meta property="og:title" content="Ezabel Ng Exposed – Singapore Scam Case" />
+  <meta property="og:description" content="Public report about Ezabel Ng's scamming actions in Yishun. Know the details before it's too late." />
+  <meta property="og:image" content="https://ourvapestoresg.github.io/ezabelng/assets/android-chrome-512x512.png" />
+  <meta property="og:url" content="https://ourvapestoresg.github.io/ezabelng/" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <link rel="apple-touch-icon" href="https://ourvapestoresg.github.io/ezabelng/assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://ourvapestoresg.github.io/ezabelng/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://ourvapestoresg.github.io/ezabelng/assets/favicon-16x16.png">
+  <link rel="manifest" href="https://ourvapestoresg.github.io/ezabelng/assets/site.webmanifest">
+  <link rel="shortcut icon" href="https://ourvapestoresg.github.io/ezabelng/assets/favicon.ico">
+  <meta name="theme-color" content="#000000" />
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-      background: #000;
+      background: linear-gradient(to top, #000000, #1a1a1a);
       color: #fff;
       font-family: 'Courier New', Courier, monospace;
       overflow: hidden;
@@ -38,7 +58,7 @@
     }
 
     .strong {
-      color: #ff1a1a;
+      color: #ff4c4c;
       font-weight: bold;
     }
 
@@ -48,6 +68,7 @@
       object-fit: cover;
       margin-bottom: 2rem;
       display: block;
+      border-radius: 8px;
     }
 
     @keyframes riseUp {
@@ -61,12 +82,14 @@
   </style>
 </head>
 <body>
-  <audio autoplay loop id="bgMusic">
-    <source src=https://s.tfrbot.com/h/jy2Dht" type="audio/mpeg">
+  <!-- Background music -->
+  <audio autoplay loop>
+    <source src="https://ourvapestoresg.github.io/ezabelng/assets/littleman.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
   </audio>
-  <div class="scroll-wrapper">
+   <div class="scroll-wrapper">
     <div class="container">
-      <img class="top-banner" src="https://s.tfrbot.com/h/e5Uvxg" alt="Banner" />
+      <img class="top-banner" src="https://s.tfrbot.com/h/hOGA4D" alt="Banner" />
       <div class="line"><strong class="strong">To the Chief Musician.</strong> Psalm of David Remix – <span class="strong">@ezabelxng</span> Edition</div>
       <div class="line">1. Wah God, don’t keep quiet leh. You know I always praise You one.</div>
       <div class="line">2. But now hor, <span class="strong">Ezabel Ng</span>—wah piang, her mouth like machine gun.</div>
